<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <CheckBox
            android:id="@+id/checkbox_todo_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_icon_save"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="@dimen/view_margin_left"
            android:layout_marginTop="4dp"
            android:src="@android:drawable/ic_menu_save"
            android:tint="@android:color/black" />

        <ImageView
            android:id="@+id/iv_icon_exit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="@dimen/view_margin_left"
            android:layout_marginTop="4dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:tint="@android:color/holo_red_dark" />

    </LinearLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_todo_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_todo"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_todo_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_todo_due_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:layout_weight="1"
                    android:text="@string/tv_due_date"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/datepicker_todo_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-40dp"
                    android:layout_marginRight="-50dp"
                    android:layout_marginTop="-30dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:scaleX="0.7"
                    android:scaleY="0.7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_todo_priority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_priority"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_todo_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_top"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/tbtn_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textOff="@string/tb_reminder"
                    android:textOn="@string/tb_reminder" />

                <LinearLayout
                    android:id="@+id/ll_set_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <EditText
                        android:id="@+id/et_todo_reminder_days"
                        android:layout_width="36dp"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:text="1"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_todo_reminder_day_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_reminder_day_before"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>

